# LabSim

./: .gitignore  README.md
scripts/: list_envs.py  random_agent.py  zero_agent.py
scripts/rl_games/: play.py  train.py
scripts/rsl_rl/: play.py  train.py
scripts/sb3/: play.py  train.py
scripts/skrl/: play.py  train.py
source/LabSim/: setup.py
source/LabSim/LabSim/: ui_extension_example.py
source/LabSim/LabSim/tasks/direct/labsim/: __init__.py  labsim_env.py  labsim_env_cfg.py
source/LabSim/LabSim/tasks/direct/labsim_marl/: __init__.py  labsim_marl_env.py  labsim_marl_env_cfg.py
source/LabSim/LabSim/tasks/manager_based/labsim/: __init__.py  labsim_env_cfg.py
source/LabSim/config/: extension.toml
source/LabSim_assets/: .info  pyproject.toml  setup.py
source/LabSim_assets/LabSim_assets/: __init__.py
source/LabSim_assets/config/: default.json  extension.toml
source/LabSim_assets/docs/: README.md
source/LabSim_assets/test/: conftest.py  test_imports.py
source/LabSim_tasks/: setup.py
source/LabSim_tasks/LabSim_tasks/: __init__.py
source/LabSim_tasks/LabSim_tasks/direct/: __init__.py
source/LabSim_tasks/LabSim_tasks/manager_based/: __init__.py
source/LabSim_tasks/LabSim_tasks/manager_based/classic/: __init__.py
source/LabSim_tasks/LabSim_tasks/manager_based/classic/ant/: __init__.py  ant_env_cfg.py
source/LabSim_tasks/LabSim_tasks/manager_based/classic/cartpole/: __init__.py  cartpole_env_cfg.py
source/LabSim_tasks/LabSim_tasks/manager_based/manipulation/: __init__.py
(+18 files in other folders)
