[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "assets"
version = "0.1.0"
description = "Assets package for LabSim"
requires-python = ">=3.7"
authors = [
    { name = "LabSim Team" }
]
dependencies = [
    "numpy",
    "scipy",
]

[project.optional-dependencies]
full = ["isaacgym"]

[tool.black]
line-length = 120
target-version = ['py37']

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3